<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F5A00F6"
    tools:context=".ViewRun">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:requiresFadingEdge="none"
        android:text="@string/running_details"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/time"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/viewTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:gravity="end"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/distance"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/viewDistance"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:gravity="end"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/viewTime"
        app:layout_constraintTop_toBottomOf="@+id/viewTime"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/speed"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/viewSpeed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:gravity="end"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/viewDistance"
        app:layout_constraintTop_toBottomOf="@+id/viewDistance"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/date"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/viewDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:gravity="end"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/viewSpeed"
        app:layout_constraintTop_toBottomOf="@+id/viewSpeed"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/exercise"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/exercise"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/viewExercise"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:gravity="end"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/viewDate"
        app:layout_constraintTop_toBottomOf="@+id/viewDate"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/name"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise"
        app:layout_constraintVertical_bias="0.187" />

    <EditText
        android:id="@+id/viewName"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:editable="true"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/viewExercise"
        app:layout_constraintTop_toBottomOf="@+id/viewDate"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/temperature"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/viewTemperature"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:editable="true"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:inputType="numberSigned"
        android:text="@string/temperature"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/viewName"
        app:layout_constraintTop_toBottomOf="@+id/viewName"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/rating"
        android:textColor="#4D00EA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        app:layout_constraintVertical_bias="0.583" />

    <EditText
        android:id="@+id/viewRating"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:editable="true"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:inputType="number"
        android:text="@string/rating"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/viewTemperature"
        app:layout_constraintTop_toBottomOf="@+id/viewTemperature"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickDelete"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.776" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/buttonDelete"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.776" />

</androidx.constraintlayout.widget.ConstraintLayout>